--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,3 +69,10 @@ build:
   project: /build/ARTEMIS.sln
   parallel: true
   verbosity: minimal
+  
+only_commits:
+  files:
+    - CMakeLists.txt
+    - appveyor.yml
+    - ARtemis/
+    - samples/
